--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick.css">
-	<title>Author</title>
+	<title>CMSystems</title>
 </head>
 <body>
 
@@ -52,7 +52,7 @@
 			</div>
 			<div class="top-banner__text">
 				<div class="top-banner__text-up">
-					<span class="brand-span">Hello! I'm</span>
+					<span class="brand-span">Somos uma empresa de software</span>
 					<h2 class="top-banner__h2">Jhone</h2>
 				</div>
 				<div class="top-banner__text-down">
