--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
 					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
+					<li><a href="projetos.html">Projetos</a></li>
 					<li><a href="#">Page 2</a></li>
 					<li><a href="#">Page 3</a></li>
 					<li><a href="#">Page 4</a></li>
